--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,32 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-areas:
+    'aside header header header header header'
+    'aside main main main main main'
+    'aside main main main main main'
+    'aside main main main main main'
+    'aside main main main main main'
+    'aside main main main main main';
+}
+
+header {
+  background-color: cornflowerblue;
+  grid-area: header;
+}
+
+aside {
+  background-color: tomato;
+  grid-area: aside;
+}
+
+main {
+  background-color: rgba(81, 182, 126, 0.842);
+  grid-area: main;
+}
