--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --clr-primary: #455d7a;
+  --clr-accent: #f95959;
+
+  --clr-heading: #233142;
+  --clr-text: #e3e3e3;
+}
 *,
 *::after,
 *::before {
@@ -7,6 +14,7 @@
 }
 
 body {
+  font-family: 'Montserrat', sans-serif;
   height: 100vh;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
@@ -20,17 +28,24 @@ body {
     'aside main main main main main';
 }
 
-header {
+/* HEADER STYLES */
+
+.header {
   background-color: cornflowerblue;
   grid-area: header;
 }
 
-aside {
-  background-color: tomato;
+/* ASIDE STYLES */
+
+.aside {
+  background-color: var(--clr-primary);
+  color: var(--clr-text);
   grid-area: aside;
 }
 
-main {
+/* MAIN STYLES */
+
+.main {
   background-color: rgba(81, 182, 126, 0.842);
   grid-area: main;
 }
