--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,30 @@ body {
   padding: 20px 40px;
 }
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.search-container input {
+  width: 90%;
+  border: none;
+  border-radius: 15px;
+  padding: 5px 8px;
+  background-color: var(--clr-text);
+}
+
+.search-container input:focus {
+  outline: none;
+}
+
 /* ASIDE STYLES */
 
 .aside {
