--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 25px;
 }
 
 .search-user-container div {
@@ -169,6 +169,8 @@ body {
 /* MAIN STYLES */
 
 .main {
-  background-color: rgba(81, 182, 126, 0.842);
+  background-color: var(--clr-text);
   grid-area: main;
+  display: flex;
+  flex-direction: row;
 }
