--- a/styles.css
+++ b/styles.css
@@ -173,4 +173,45 @@ body {
   grid-area: main;
   display: flex;
   flex-direction: row;
+  padding: 15px 10px;
+}
+
+.cards__title,
+.announcements__title,
+.trending__title {
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--clr-heading);
+  margin-bottom: 20px;
+}
+
+.cards {
+  width: 75%;
+}
+
+.card {
+  width: 40%;
+  border-left: 8px solid rgb(204, 191, 12);
+  border-radius: 15px;
+  padding: 20px 15px;
+  background-color: #fff;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.card__title {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+.card__text {
+  font-size: 13px;
+  color: #666;
+  margin-bottom: 15px;
+}
+
+.card__actions {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: flex-end;
 }
