--- a/styles.css
+++ b/styles.css
@@ -189,8 +189,14 @@ body {
   width: 75%;
 }
 
+.cards__container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 .card {
-  width: 40%;
+  width: 45%;
   border-left: 8px solid rgb(204, 191, 12);
   border-radius: 15px;
   padding: 20px 15px;
